- Implemented game object renaming in the outline
- Implemented duplicate game object (deep copy), terrainAsset can not be duplicated
- Implemented delete game object undo/redo command
- Fixed parenting in outline. Now local position is correctly calculated
- Implemented Scale Tool (with undo/redo)
- Implemented a brand-new, super awesome asset management system based on meta files
- Added standard assets to each new project
- Added a "save and exit" option to the exit dialog

[0.0.8] ~ 23/06/2016
- Updated libGDX to 1.9.3
- Updated VisUI to 1.1.1
- Added an option to the settings dialog to change the keyboard layout
- Added a height map loader to the terrainAsset component widget in the inspector
- Implemented a Blender-like rotation tool
- Toast messages at top right corner of the screen
- Huge internal refactoring
- Ctrl+S shortcut for saving the project
- Fixed crash on MacOS: https://github.com/mbrlabs/Mundus/commit/fdd193caa7b75e5a1607f448c1f81d1faeec86dd
- Added a confirm dialog when exiting the editor
- Reimplemented the scene graph
- Added perlin noise for terrains

[0.0.7] ~ 28/02/2016
- Implemented a undo/redo system for most operations
- Implemented a shortcut system
- The 3D viewport is now a UI widget and scales correctly with the window size
- The inspector now spans the whole right side as sidebar
- New lighting system for the terrainAsset & entity shader
- Child objects of a selected parent object will be highlighted now as well
- Changed internal save file format to allow a better precision for game object transformation
- Improved the translate tool
- Implemented game object rotation & scaling
- Implemented a highly accurate game object picking system (see: http://www.opengl-tutorial.org/miscellaneous/clicking-on-objects/picking-with-an-opengl-hack/)
- Drag'n Drop for game objects in the outline
- In the inspector, all transformations are now displayed as relative transformations with the parent object as origin
- Improved game object parenting