@@ -15,6 +15,7 @@
 - Fixed parenting in outline. Now local position is correctly calculated
 - Implemented Scale Tool (with undo/redo)
 - Implemented a brand-new, super awesome asset management system based on meta files
+- Implemented a material system for models
 - Added standard assets to each new project
 - Added a "save and exit" option to the exit dialog
 
